tests/base/parser/bad/type_t-map-cid-lparen-cid-cid-lparen-map-cid-cid-rbrace.scilla
scilla_version 0

library TestLib

let f : Map Uint128 (Pair (Map Uint128 Option 'A